--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm install -g newman
-    - run: newman run mycollection.json -e env.json --reporter-html-export newman
+    - run: npm run gittest
