--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -10,4 +10,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-        - run: npm run gittest
+        - run: npm install -g newman
+        - run: newman run mycollection.json -e env.json --reporter-html-export newman
