--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+           node-version: [12.x, 14.x, 16.x]
         - run: npm install -g newman
         - run: newman run mycollection.json -e env.json --reporter-html-export newman
