--- a/.github/workflows/postman-pull-request.yml
+++ b/.github/workflows/postman-pull-request.yml
@@ -16,20 +16,20 @@ jobs:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-  steps:
-  - name: Check out Git repositor
-    uses: actions/checkout@v1
-  - name: Set up Node.js
-    uses: actions/setup-node@v1
-    with:
-      node-version: ${{ matrix.node-version }}
-      registry-url: https://registry.npmjs.org/
-  - name: Install dependencies
-    run: npm install
-  - name: Install newman
-    run: npm install -g newman
-  - name: Run the API and Postman's tests
-    run: | 
-      npm run start:dev &
-      sleep 60
-      newman run mycollection.json -e env.json -r html
+    steps:
+          - name: Check out Git repositor
+          - uses: actions/checkout@v1
+          - name: Set up Node.js
+            uses: actions/setup-node@v1
+            with:
+             node-version: ${{ matrix.node-version }}
+             registry-url: https://registry.npmjs.org/
+          - name: Install dependencies
+          - run: npm install
+          - name: Install newman
+          - run: npm install -g newman
+          - name: Run the API and Postman's tests
+          - run: | 
+                  npm run start:dev &
+                  sleep 60
+                  newman run mycollection.json -e env.json -r html
