--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        registry-url: https://registry.npmjs.org/
     - run: npm install
     - run: npm install -g newman
-    - run: newman run mycollection.json -e env.json --reporter-html-export newman
+    - run: | 
+            npm run  start:dev &
+            sleep 60
+            newman run mycollection.json -e env.json -r html
