--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         registry-url: https://registry.npmjs.org/
     - run: npm install
-    - run: npm install -g newman
+    - run: npm install newman-reporter-html
     - run: newman run mycollection.json -e env.json -r html
